src/css/main.css
@tailwind base;

@tailwind components;

@tailwind utilities;

ul {
  list-style: disc;
  margin-left: 1.5rem;
}

p {
  margin-bottom: 1rem;
}

img {
  object-fit: cover;
}

main {
  min-height: 25vh;
}

hr {
  @apply text-cloudy-blue;
}

/* Content */
.markdown {
  font-size: 1.125rem;
}

.markdown p,
.markdown ul,
.markdown ol {
  max-width: 42rem;
}

.markdown p {
  margin-bottom: 2rem;
}

.markdown ul {
  margin-bottom: 2rem;
}

.markdown h2 {
  font-size: 1.5rem;
  font-weight: 700;
  margin-bottom: 1rem;
}

.markdown h3 {
  font-size: 1.25rem;
  font-weight: 700;
  margin-bottom: 1rem;
}

/* Blockquotes */
.markdown blockquote {
  background-color: #506fc5;
  border-left: 0.5rem solid #274391;
  clear: both;
  color: #fff;
  float: right;
  font-size: 1.5rem;
  font-weight: 800;
  line-height: 1.5;
  margin-left: 1.5rem;
  margin-right: -8rem;
  max-width: 336px;
  padding: 1rem 1.5rem;
}

@media (max-width: 1024px) {
  .markdown blockquote {
    float: none;
    margin-bottom: 2rem;
    margin-left: 0;
    margin-right: 0;
    max-width: none;
  }
}

.markdown blockquote p {
  font-size: 1.5rem;
  margin: 0;
}

.markdown blockquote.quote {
  clear: both;
  font-family: "Crimson Text", serif;
  font-weight: normal;
  margin-bottom: 2rem;
  margin-left: -1.5rem;
  margin-right: -1.5rem;
}

@media (max-width: 1024px) {
  .markdown blockquote.quote {
    margin-left: 0;
    margin-right: 0;
  }
}

.markdown blockquote.quote.yellow {
  background-color: #ffcb05;
  border-color: #eaba02;
  color: #00274c;
}

.markdown blockquote.quote.blue {
  background-color: #00274c;
  border-color: #001324;
}

.markdown blockquote.quote.full {
  float: none;
  max-width: none;
}

.markdown blockquote.quote.floated {
  float: right;
  margin-left: 1.5rem;
  margin-right: -10rem;
  max-width: none;
  width: 70%;
}

@media (max-width: 1024px) {
  .markdown blockquote.quote.floated {
    float: none;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
  }
}

.markdown blockquote.quote > p {
  font-size: 1.5rem;
  padding-left: 1.5rem;
  padding-top: 0.75rem;
  position: relative;
}

blockquote.quote > p::before {
  content: "“";
  font-family: "Muli";
  font-size: 75px;
  left: -0.5rem;
  position: absolute;
  top: -1rem;
}

.markdown blockquote.blue > p::before {
  color: #ffcb05;
}

blockquote.quote > p::after {
  content: '"';
}

.markdown blockquote.quote > footer {
  font-family: "Muli", sans-serif;
  font-size: 0.9375rem;
  margin-top: 1.5rem;
  text-align: right;
}

.markdown blockquote.quote cite {
  font-style: normal;
}

.markdown a {
  color: #1C7797;
  box-shadow: inset 0 -1px #1C7797;
}

.markdown a:hover,
.markdown a:focus {
  box-shadow: inset 0 -2px #1C7797;
}

.markdown.small-margin p {
  margin-bottom: 1rem;
}

/* Advanced image */
.advanced-image {
  border-radius: 0.25rem;
  max-width: 336px;
}

.advanced-image.none {
  margin-bottom: 2rem;
  max-width: none;
}

.advanced-image.left {
  float: left;
  margin-left: -8rem;
  margin-right: 2rem;
}

.advanced-image.right {
  float: right;
  margin-left: 2rem;
  margin-right: -8rem;
}

@media (max-width: 1024px) {
  .advanced-image.right,
  .advanced-image.left {
    float: none;
    margin-bottom: 2rem;
    margin-left: 0;
    margin-right: 0;
  }
}

.advanced-image figcaption {
  color: #5f686d;
  font-size: 0.875rem;
  margin-top: 0.75rem;
}

.advanced-image figcaption .credit:not(:empty)::after {
  border-bottom: 0.25rem solid #00274c;
  content: "";
  display: block;
  height: 0.25rem;
  margin-top: 0.75rem;
  width: 12rem;
}

.advanced-image figcaption .credit {
  font-style: italic;
}

/* Navigation */
.nav-item::after {
  background-color: #00274c;
  bottom: -20px;
  content: "";
  height: 0;
  left: 0;
  position: absolute;
  transition: height 0.15s ease;
  width: 100%;
}

@media (max-width: 1024px) {
  .nav-item::after {
    bottom: -10px;
  }
}

.nav-item:hover::after,
.nav-item:focus::after,
.nav-item.active::after {
  height: 5px;
  transition: height 0.15s ease;
}

/* Line heading */
@responsive {
  .line-heading {
    position: relative;
  }

  .line-heading::after {
    border-bottom: 1px solid #aab9e3;
    content: "";
    position: absolute;
    width: 100%;
  }

  .line-heading > * {
    background-color: #fefefe;
    position: relative;
    z-index: 1;
  }
}

.slide-blur {
  background-image: linear-gradient(
    to right,
    rgba(255, 255, 255, 0) -36%,
    #ffffff 100%
  );
}

/* Shadows */
@variants group-hover, hover, focus {
  .shadow-1 {
    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
  }
}

/* Media */
.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

.embed-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Clip */
.clip {
  position: fixed !important;
  _position: absolute !important;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}

/* Full width */
.full-width {
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
}

/* Social links */
.social-link {
  background-image: url("../../static/assets/social.svg");
  background-repeat: no-repeat;
  height: 1.5rem;
  margin-right: 0.5rem;
  width: 1.5rem;
}

.social-link:last-child {
  margin-right: 0;
}

.social-link[href*="feed"] {
  background-position: 0 0;
}

.social-link[href*="facebook"] {
  background-position: -1.5rem 0;
}

.social-link[href*="twitter"] {
  background-position: -3rem 0;
}

.social-link[href*="youtube"] {
  background-position: -4.5rem 0;
  width: 2.25rem;
}

.social-link[href*="linkedin"] {
  background-position: -6.75rem 0;
  width: 2.25rem;
}

.bluesky svg {
  fill: #00274c;
}

.bluesky:hover svg {
  fill: #1185fe;
}

.social-link:hover,
.social-link:focus {
  background-position-y: -1.5rem;
}

.logo-link {
  height: 30px;
}

/* Drop cap */
.drop-cap > p:first-child:first-letter {
  color: #00274c;
  float: left;
  font-family: "Crimson Text";
  font-size: 6.25rem;
  font-weight: 700;
  line-height: 6.25rem;
  margin-top: -1rem;
  padding-right: 0.75rem;
}

/* Infographics */
.infographic {
  background: url("../../static/assets/info-border.svg") center no-repeat;
}

/* Card */
.card {
  transition: box-shadow 0.15s ease;
}

.card:hover,
.card:focus {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
  transition: box-shadow 0.15s ease;
}

/* Links */
.link-hover {
  box-shadow: inset 0 -1px #1c7797;
}

.link-hover:hover,
.link-hover:focus {
  box-shadow: inset 0 -2px #1c7797;
}

/* Services */
.services {
  height: auto;
  background-color: #cddfee;
  padding: 1em !important;
  font-size: 1.4em;
  font-weight: bold;
}

.services:hover,
.services:focus {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
  transition: box-shadow 0.15s ease;
}

/* Trending */
.trending img {
  transition: box-shadow 0.15s ease;
}

.trending:focus img,
.trending:hover img {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
  transition: box-shadow 0.15s ease;
}

.trending:focus h3,
.trending:hover h3 {
  text-decoration: underline;
}

/* Spinner */
.spinner {
  width: 40px;
  height: 40px;

  position: relative;
  margin: 100px auto;
}

.-rotate-90 {
  transform: rotate(-90deg);
}

.rotate-90 {
  transform: rotate(90deg);
}

/* Animation */
.transition-color {
  transition: background-color 0.15s ease-in, color 0.15s ease-in;
}

.transition-transform {
  transition: transform 0.15s ease-in;
}

.animated {
  animation-duration: 0.75s;
  animation-fill-mode: both;
}

.double-bounce1,
.double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #333;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  animation: sk-bounce 2s infinite ease-in-out;
}

.double-bounce2 {
  animation-delay: -1s;
}

@keyframes sk-bounce {
  0%,
  100% {
    transform: scale(0);
  }
  50% {
    transform: scale(1);
  }
}

.fade-in {
  animation: fade-in 0.25s ease-in-out;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fade-in-up {
  animation-name: fade-in-up;
}

@keyframes fade-in-up {
  from {
    opacity: 0;
    transform: translate3d(0, 2.5%, 0);
  }

  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

/* Translates */
@responsive {
  .translate-x-0 {
    transform: translateX(0);
  }

  .-translate-x-320 {
    transform: translateX(-320px);
  }
}

/* Hamburger */
.hamburger {
  display: inline-block;
  cursor: pointer;
  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 0;
  overflow: visible;
}
.hamburger:hover {
  opacity: 0.7;
}
.hamburger.is-active:hover {
  opacity: 0.7;
}
.hamburger.is-active .hamburger-inner,
.hamburger.is-active .hamburger-inner::before,
.hamburger.is-active .hamburger-inner::after {
  background-color: #212b36;
}

.hamburger-box {
  width: 40px;
  height: 24px;
  display: inline-block;
  position: relative;
}

.hamburger-inner {
  display: block;
  top: 50%;
  margin-top: -2px;
}
.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
  width: 40px;
  height: 4px;
  background-color: #212b36;
  border-radius: 4px;
  position: absolute;
  transition-property: transform;
  transition-duration: 0.15s;
  transition-timing-function: ease;
}
.hamburger-inner::before,
.hamburger-inner::after {
  content: "";
  display: block;
}
.hamburger-inner::before {
  top: -10px;
}
.hamburger-inner::after {
  bottom: -10px;
}
.hamburger--collapse .hamburger-inner {
  top: auto;
  bottom: 0;
  transition-duration: 0.13s;
  transition-delay: 0.13s;
  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
}
.hamburger--collapse .hamburger-inner::after {
  top: -20px;
  transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
    opacity 0.1s linear;
}
.hamburger--collapse .hamburger-inner::before {
  transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
    transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--collapse.is-active .hamburger-inner {
  transform: translate3d(0, -10px, 0) rotate(-45deg);
  transition-delay: 0.22s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}
.hamburger--collapse.is-active .hamburger-inner::after {
  top: 0;
  opacity: 0;
  transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
    opacity 0.1s 0.22s linear;
}
.hamburger--collapse.is-active .hamburger-inner::before {
  top: 0;
  transform: rotate(-90deg);
  transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
    transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
}

/* Profile */
.profile-quote::after {
  content: '"';
}

/* Universal Header */
.universal-header-container ul {
  list-style: none;
  margin: 0;
}

